# Django-Server

./: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  Taskfile.sh  compose.caddy.yaml  compose.db.yaml  compose.yaml  conftest.py  create_superuser.sh  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml  lint.yml
DjangoServer/: __init__.py  asgi.py  celery.py  decorators.py  service.py  settings.py  urls.py  utils.py  wsgi.py
DjangoServer/helpers/: datetime.py
DjangoServer/validators/: misc_validators.py  password_validators.py  phone_number_re.py
authentication/: admin.py  custom_auth.py  exceptions.py  models.py  permissions.py  selectors.py  serializers.py  services.py  sms.py  tasks.py  urls.py  utils.py  views.py
authentication/migrations/: 0001_initial.py  0002_profile_is_verified_onetimepassword.py  0003_alter_onetimepassword_options_alter_profile_options_and_more.py  0004_alter_profile_liked_adverts.py  0005_profile_rating.py  0006_alter_profile_type.py
authentication/misc/: custom_auth.py  validators.py
booking/: admin.py  models.py  permissions.py  serializers.py  service.py  services.py  urls.py  views.py
common/: decorators.py
load_testing/: test_auth.py
notification/: tasks.py
payments/: admin.py  exceptions.py  models.py  selectors.py  serializers.py  urls.py  views.py
review/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
stats_configs/: prometheus.yaml  prometheus.yml
support/: admin.py  models.py  serializers.py  urls.py  views.py
(+51 files in other folders)
